# ZMSI

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yaml
app/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
app/static/css/: style.css
app/templates/: base.html  index.html  single_comment.html
app/views/: __init__.py  add_comment.py  index.py
src/: __init__.py  predict_class.py  preprocessing.py  tokenizer.py  train.py
src/config/: __init__.py  path.py  setup.py
src/logs/: logger.py
src/resources/: __init__.py  manager.py  path.py  plotter.py  setup.py  train.py
