[tool.poetry]
name = "zastosowanie-metod-sztucznej-inteligencji"
version = "0.1.0"
description = "Sentiment analysis of product reviews"
authors = ["Adam Wawrzyniak, Marceli Górski"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
debugpy = "1.8.7"
pandas = "^2.2.3"
pytest = "^8.3"
pytest-cov = "^5.0"
datasets = "^3.0.1"
scikit-learn = "^1.5.2"
tabulate = "^0.9.0"
torch = "^2.1.0"
transformers = "^4.45.2"

[tool.poetry.dev-dependencies]
ruff = "^0.7.0"
mypy = "^1.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "src"
ignore_missing_imports = true
allow_redefinition = true
disallow_untyped_defs = false

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",   # Ignore trailing comments should have at least two spaces before the `#`.
    "D100",     # Ignore missing docstring in public modules.
    "D101",     # Ignore missing docstring in public classes.
    "D203",     # Ignore one blank line required before class docstring.
    "D212",     # Ignore multi-line docstring should start on the first line.
    "D413",     # Ignore missing blank line after last section of a docstring.
    "E501",     # Ignore long lines (lines exceeding 120 characters).
    "FA102",    # Checks for uses of PEP 585- and PEP 604-style type annotations.
    "ISC001",   # Ignore subprocess.run used without `check=True`.
    "PTH",      # Ignore Path.
    "PD901",    # Derived from the pandas-vet linter.
    "PD002",    # Allow using inplace=True.
    "TD",       # Ignore missing-todo informations
    "FIX002",   # Ignore contains todo.
    "ERA001",   # Ignore commented a few lines.
    "PLR2004",  # Allow magic value comparison.
    ]
unfixable = ["B"]
fixable = ["ALL"]

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "D104", "F401"]
"**/{tests,docs,tools}/*" = ["E402"]
